test/feature/Syntax/Error_Arguments.js
// Should not compile.
// SyntaxError: feature/Syntax/Error_Arguments.js:7:6: Unexpected token )

function f(x) {
}

f(x, );
